[package]
name = "evasion"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30.5"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_Registry",
] }
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
winreg = "0.52.0"
